--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,12 +48,15 @@
 
         "code/student/.hello": true,
 
-        // ===============================
-        // Hide from both students and dev
-        // ===============================
+        // ====================================================
+        // BareMetal-C-Dev/.vscode/settings_for_hidden_files.md
+        // ====================================================
 
         // Hiding git internals
         "**/.git": true,
+        
+        // Hiding Jekyll theme
+        "_config.yml": true,
 
         // Hiding LICENSE
         "**/LICENSE": true,
